## ====================================================================
## file:	Makefile.am
## contents:	automake template
## author:      stefan kersten <steve@k-hornz.de>
## CVS:         $Id$
## ====================================================================

MAINTAINERCLEANFILES =	\
	Makefile.in	\
	aclocal.m4	\
	autom4te.cache	\
	config.cache	\
	config.guess	\
	config.h.in	\
        config.h.in~    \
	config.sub	\
	configure	\
        depcomp         \
	install-sh	\
	ltmain.sh	\
	missing		\
	mkinstalldirs	\
        stamp-h         \
	stamp-h.in

SUBDIRS			= source headers linux
EXTRA_DIST		= build

## EOF ================================================================
